@@ -1440,6 +1440,8 @@ hypersearch-results.redo=Redo HyperSearch
 hypersearch-results.tree-view=Toggle Tree View
 hypersearch-results.clear.label=Remove All Nodes
 hypersearch-results.clear.icon=22x22/actions/edit-clear.png
+hypersearch-results.stop.label=Stop HyperSearch and show current results
+hypersearch-results.stop.icon=22x22/actions/process-stop.png
 hypersearch-results.multi.label=Toggle Multiple Results
 hypersearch-results.multi.multiple.icon=22x22/actions/edit-find-multiple.png
 hypersearch-results.multi.single.icon=22x22/actions/edit-find-single.png
